--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,10 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("jamnikflamia.jpg");
+  background-image: url("./assets/jamnikflamia.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
 }
 
 header {
